testsuite/tests/parser/should_fail/OpaqueParseFail2.stderr

OpaqueParseFail2.hs:4:12: error: [GHC-58481]
    parse error on input ‘SPECIALISE’
